@@ -10,8 +10,8 @@
     .order__icon{
         font-size: 1.2rem;
         position: absolute;
-        right: 15px;
-        top: 15px;
+        right: 1rem;
+        top: 1rem;
         color: #ccc;
         transition: transform ease .2s, color ease .2s;
         display: none;
