@@ -1,11 +1,13 @@
 :host {
-    padding: .25rem 0rem;
     display: block;
     width: 100%;
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
     transition: transform ease .5s;
+    margin-bottom: .75rem;
 
     .list-item__container {
-        border: 1px solid #f2f2f2;
         background-color: #fff;
         width: 100%;
         border-radius: 5px;
